styles.css
/* CSS Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }

  @keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translate3d(0, 0, 0);
    }
    40% {
        transform: translate3d(0, -30px, 0); /* Move the link up 10px along the Y-axis */
    }
    60% {
        transform: translate3d(0, -15px, 0); /* Move the link up 5px along the Y-axis */
    }
}
  
  body {
  /* background-color: rgba(100, 100, 75, 0.5); */
}

#welcome-section {
    background-color: rgba(49, 189, 240, 0.5);
    display: flex;
    flex-direction: column; 
    justify-content: center;
    align-items: center;
    height: calc(100vh - 10vh);
    margin-top: 10vh;
    text-align: center;
}

#welcome-section h1 {
    margin: 0;
    position: relative;
    font-family: 'Courier New', Courier, monospace;
    font-size: 50px;
    text-shadow: 2px 2px 1px rgba(55, 100, 55, 0.5);
}

#welcome-section:hover {
    background-color: bisque;
}

#welcome-section h1:hover {
    animation: bounce 3s;
}

#navbar {
  position: fixed;
  display: flex;
  top: 0;
  height: 10vh;
  width: 100vw;
  padding: 5px;
  justify-content: space-around;
  align-items: center;
  gap: 15px;
  background-color: rgba(55, 100, 55, 0.5);
  z-index: 1000;
}

#navbar:hover {
    background-color: rgba(0, 128, 128, 1);
}

.nav-link {
    font-family: Verdana, sans-serif;
    font-size: 20px;
    color: white;
    transition: transform 0.3s ease, color 0.3s ease;
}

.nav-link:hover {
  color: black;
  background-color:aqua;
  text-decoration:solid;  
  transform: translate3d(10px, 0, 0);
  animation: bounce 1s;
  border-radius: 8%;
}

@media (max-width: 600px) {
  #navbar {
    flex-direction: column;
    height: auto;
  } 
}

@media (max-width: 600px) {
    #project-grid {
        flex-direction: column;
        align-items: center;
    }
    .project-grid-item {
        width: 90%;
    }
}


/* .spacer {
  height: 100vh;
  width: 100%;
  background-color: rgba(155, 100, 55, 0.5);
} */

#projects {
    background-color: rgba(55, 100, 55, 0.5);
    height: 90vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    font-family: 'Courier New', Courier, monospace;
    font-size: large;
    font-weight: 200;
}

#projects h1 {
    font-size: 50px;
    text-shadow: 2px 2px 1px rgba(55, 100, 55, 0.5);
    text-decoration: underline;
}

#project-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr));
   /* flex-direction: row-reverse; */
    justify-items: center;
    gap: 20px;
    padding: 10px;
}

/*
.project-grid-item {
    height:auto;
    width: auto;
    max-height: 300px;
    max-width: 300px;
}

.project-image {
    height: 20vh;
    width: 20vw;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}
*/

.project-grid-item {
    height: 30vh;
    width: 20vw;
}

.project-image {
    height: 90%;
    width: 100%;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}


.project-item-title {
    text-align: center;
    font-family: 'Courier New', Courier, monospace;
    font-size: medium;
    color: white;
    background-color: black;
	
	position: relative; /* Makes it independent of other content */


    transition: transform 1s ease-in-out;
}

/* .project-image:hover {
    filter: brightness(200%);
    z-index: 2000;
    height: 120%;
    width: 125%;
} */


.project-grid-item:hover .project-item-title {
	transform: translateY(210%); /* Moves the title down when image is hovered */
   /* opacity: 0;  Hides the title */
}

.project-image:hover {
    transform: scale(1.3);
    Z-index: 100;
	filter: brightness(200%);
}

#projects:hover {
    background-color: rgba(0, 128, 128, 1);
}

.project-item-title:hover {
    text-decoration: underline;
}

/* ---- */

#repositories {
    background-color: rgba(49, 189, 240, 0.5);
    height: calc(100vh - 30vh);
    width: 100vw;
    display: flex;
    flex-direction: column;
    font-family: 'Courier New', Courier, monospace;
    margin: auto;
    padding: 20px;
    align-items: center;
}

#repositories h1,
#repositories h3 {
    margin-top: 10%;
}

#repositories:hover {
    background-color: bisque;
}

#repositories h1 {
    font-size: 40px;
    text-decoration: underline;
}

#repositories-item-container {
    display: flex;
    flex-direction: column;
    /* border: 2px solid black; */
    height: 50%;
    width: 80%;
    justify-content: center;
    align-items: center;
    gap: 20px;
    margin-bottom: 10px;
}

#repositories-icons-container {
    display: flex;
    flex-direction: row;
    /* border: 2px solid black; */
    height: 50%;
    width: 80%;
    justify-content: center;
    align-items: center;
    gap: 30px;
    margin-bottom: 10px;
}
.profile-link {
    margin-top: 20;
    font-family: 'Courier New', Courier, monospace;
    font-size: 25px;
    font-weight: none;
    color: white;
}

/* idea: make the link "run" from cursor */
.profile-link:hover {
    text-decoration: none;
    font-size: 30px;
    color: royalblue;
    animation: bounce 2s;
}

footer {
    display: flex;
    height: 20vh;
    width: 100vw;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    gap: 20px;
    border-top: 10px solid black;
    background-color: rgba(49, 189, 240, 0.5);
}

footer p {
    justify-content: center;
    align-items: center;
    margin: 0 auto;
}

footer p:hover {
    animation: slideIn 2s ease-in-out 1s; 
}

@keyframes slideIn {
    from {
        transform: translateX(-100%);
    }
    to {
        transform: translateX(0%);
    }
}

.slideIn {
    animation: slideIn 2s ease forwards;
}

